# libpicobt

./: .gitignore  CMakeLists.txt  Doxyfile  README  README.md  build.bat  doxyfile  pkg-config.pc.cmake
CMakeModules/: FindCheck.cmake
examples/: client-port.c  client-service.c  devicelist.c  discovery.c  make.bat  make.sh  server-port.c  server-service.c  services.c
include/picobt/: bt.h  bterror.h  btmain.h  btsdp.h  bttypes.h  btutil.h  devicelist.h  log.h
rpm/: libpicobt.spec
src/: btmain.c  btsdp.c  btutil.c  devicelist.c  log.c  main.dox
tests/: test_btmain.c  test_btutil.c  test_devicelist.c  test_main.c
tests/mock/: mockbluez.c  mockbluez.h
